--- a/.gitignore
+++ b/.gitignore
@@ -39,12 +39,4 @@ captures/
 .externalNativeBuild
 
 # Google Services (e.g. APIs or Firebase)
-/.idea/caches
-/.idea/codeStyles
-/.idea/libraries
-/.idea/workspace.xml
-/.idea/vcs.xml
-/.idea/runConfigurations.xml
-/.idea/misc.xml
-/.idea/markdown-navigator.xml
-
+/.idea/
