--- a/netgo/build.gradle
+++ b/netgo/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: 'com.github.dcendents.android-maven'
+
+group = 'com.github.PingerOne'
 
 android {
 
@@ -26,11 +29,11 @@ dependencies {
 
     api rootProject.getDependenceProperty()['kotlin']
 
-    api 'com.google.code.gson:gson:2.8.2'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
+    api 'com.google.code.gson:gson:2.8.2'
     api 'com.squareup.retrofit2:retrofit:2.3.0'
     api 'com.squareup.retrofit2:converter-gson:2.3.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
     api 'com.squareup.okhttp3:okhttp:3.10.0'
     api 'io.reactivex.rxjava2:rxjava:2.2.2'
 //    implementation 'com.trello.rxlifecycle2:rxlifecycle:2.0.1'
